[package]
name = "task001"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = {version = "0.6.8", features = ["cors"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
serde_urlencoded = "0.7"